<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/credits_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="64dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="56sp"
        android:letterSpacing="0.15" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColor="@color/secondary_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_label"
        android:textAllCaps="true"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:letterSpacing="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="unfamiliardev"
        android:textColor="@color/primary_text"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:focusable="true"
        android:text="github.com/unfamiliardev/BBC"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/dismiss" />

</LinearLayout>
